fixed section wrapping issue

--- a/src/app/components/term-list/term-list.module.css
+++ b/src/app/components/term-list/term-list.module.css
@@ -26,13 +26,14 @@
 
 .term-section {
     flex: 0 1;
-    height: 30%;
+    height: auto;
     width: 100%;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    /* flex-direction: column;
     align-items: start;
     justify-content: start;
-    flex-wrap: wrap;
+    flex-wrap: wrap; */
 }
 
 .letter-container {
@@ -53,6 +54,6 @@
     font-size: small;
     flex: 1 1;
     text-decoration: none;
-    color: blue;
-    margin: 2px 0;
+    color: rgb(29, 124, 224);
+    margin: 3px;
 }
